force-app/main/default/objects/Memory_Game_Result__c/Memory_Game_Result__c.object-meta.xml
<CustomObject>
    <description>Tracks the user that played the game, the amount of movements and the time it took to complete the game</description>
    <label>Memory Game Result</label>
    <nameField>
        <label>Memory Game Result Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Memory Game Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>