force-app/main/default/objects/Memory_Game_Result__c/fields/Completed_on__c.field-meta.xml
<CustomField>
    <fullName>Completed_on__c</fullName>
    <description>Date and time the player completed the game</description>
    <label>Completed on</label>
    <type>DateTime</type>
</CustomField>