force-app/main/default/objects/Memory_Game_Result__c/fields/Moves__c.field-meta.xml
<CustomField>
    <fullName>Moves__c</fullName>
    <description>Amount of moves the player made</description>
    <label>Moves</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>