force-app/main/default/objects/Memory_Game_Result__c/fields/Player__c.field-meta.xml
<CustomField>
    <fullName>Player__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User that played the game</description>
    <label>Player</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Memory_Game_Results</relationshipName>
    <type>Lookup</type>
</CustomField>