force-app/main/default/objects/Memory_Game_Result__c/fields/Time__c.field-meta.xml
<CustomField>
    <fullName>Time__c</fullName>
    <description>Amount of seconds it took for the player to complete the game</description>
    <label>Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>